# terraform-provider-opentelekomcloud

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  .travis.yml  .zuul.yaml  CHANGELOG.md  GNUmakefile  README.md  go.mod  go.sum  localrc  main.go  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
aws/: auth_helpers.go  provider.go  provider_test.go  validators.go
docs/: backends.md  conf.py  index.md  requirements.txt
examples/: README.md  alarm_rule.tf  antiddos.tf  csbs_backup.tf  csbs_backup_policy.tf  cts_tracker.tf  instances.tf  keypairs.tf  loadbalancer.tf  network.tf  runtime.yaml  secgroups.tf  variables.tf  vbs.tf  volumes.tf  vpc.tf
huaweicloud/: auth_helpers.go  awserr.go  compute_instance_v2_networking.go  config.go  data_source_aws_s3_bucket_object.go  data_source_aws_s3_bucket_object_test.go  data_source_huaweicloud_images_image_v2.go  data_source_huaweicloud_images_image_v2_test.go  data_source_huaweicloud_networking_network_v2.go  data_source_huaweicloud_networking_network_v2_test.go  data_source_huaweicloud_networking_secgroup_v2.go  data_source_huaweicloud_networking_secgroup_v2_test.go  data_source_huaweicloud_s3_bucket_object.go  data_source_huaweicloud_s3_bucket_object_test.go  diff_suppress_funcs.go  import_aws_s3_bucket.go  import_aws_s3_bucket_notification_test.go  import_aws_s3_bucket_test.go  import_heiweicloud_compute_flavor_v2_test.go  import_heiweicloud_compute_floatingip_associate_v2_test.go  import_heiweicloud_compute_floatingip_v2_test.go  (+110 more)
(+3183 files in other folders)
