[metadata]
name = terraform_provider_opentelekomcloud
summary = Terraform Open Telekom Cloud Provider
description_file =
    README.md
author = Open Telekom Cloud
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    OpenStack, Open Telekom Cloud, OTC, T-Systems, Telekom
